# data-repos

./: .gitignore  README.md  dev-requirements.in  pyproject.toml
.github/workflows/: unit_tests.yml
data-repos/: README.md  pyproject.toml
data-repos-cars/: LICENSE  README.md  pyproject.toml
data-repos-cars/data_repos/: cars.json
data-repos/tests/: test_data_repos.py
data_repo/: greetings.csv  read.py
data_repos/: cars.json  countries.csv  read.py
tests/: test_data_repo.py  test_data_repos.py
