[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "data-repo"
authors = [
    {name = "Ian Currie", email = "iansedano@gmail.com"},
    {name = "Geir Arne Hjelle", email = "geirarne@gmail.com"},
    { name = "Real Python", email = "info@realpython.com" }
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["namespace", "data"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
]
dynamic = ["version", "description"]

[project.urls]
Homepage      = "https://realpython.com/namespace-package"
"Source Code" = "https://github.com/realpython/data-repo"
Tutorial      = "https://realpython.com/namespace-package"

[project.optional-dependencies]
dev  = ["black", "flit", "isort"]

[tool.black]
line-length=80

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "data_repo imports"