[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "data-repo"
authors = [
    { name = "Ian Currie", email = "iansedano@gmail.com" },
    { name = "Geir Arne Hjelle", email = "geirarne@gmail.com" },
    { name = "Real Python", email = "info@realpython.com" },
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["namespace", "data"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pandas"]
dynamic = ["version"]

[project.urls]
Homepage      = "https://realpython.com/namespace-package"
"Source Code" = "https://github.com/realpython/data-repo"
Tutorial      = "https://realpython.com/namespace-package"

[project.optional-dependencies]
dev  = ["black", "bump2version", "ruff", "interrogate", "isort"]
test = ["black", "ruff", "interrogate", "pytest", "pytest-cov", "tox"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "DataRepo imports"

[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build"]

[tool.tox]
legacy_tox_ini = """
[tox]
    isolated_build = true
    envlist = py, style


    [testenv]
    deps =
        pytest
        pytest-cov
    commands =
        {envpython} -m pytest --cov=data_repo --cov-fail-under=100 --cov-report=term-missing


    [testenv:style]
    skip_install = true
    deps = 
        black
        ruff
        interrogate
        pytest
        isort
    commands = 
        {envpython} -m black --check --quiet data_repo/ tests/
        {envpython} -m ruff check data_repo/ tests/
        {envpython} -m interrogate --quiet --config=pyproject.toml
        {envpython} -m isort --check data_repo/ tests/
"""

[tool.ruff]
# Same as Black.
line-length = 88

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
