[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["data_repos"]

[project]
name = "data-repos-cars"
version = "1.0.0"
authors = [
    { name = "Real Python", email = "info@realpython.com" },
    { name = "Ian Currie", email = "iansedano@gmail.com" },
    { name = "Geir Arne Hjelle", email = "geirarne@gmail.com" },
]
readme = "README.md"
description = "A cars dataset included in the DataRepos namespace package"
requires-python = ">=3.7"
keywords = ["namespace", "data", "cars"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["data-repos"]

[project.urls]
Homepage      = "https://realpython.com/python-namespace-package/"
"Source Code" = "https://github.com/realpython/data-repos/"
Tutorial      = "https://realpython.com/python-namespace-package/"
